# FFmpegExplorer

./: .gitignore  .travis.yml  DISABLED.appveyor.yml  FFmpegExplorerSolution.pro  GUI design.txt  README.md  appveyor.yml
Archive/: FFmpegExplorerSolution.pro
DeployedExe/: deployCmd.txt
FFmpegExplorer/: CMakeLists.txt  CustomStackView.qml  DetailsControl.qml  FFmpegExplorer.pro  InputPage.qml  InputPage_old.qml  ListControl.qml  MediaSelectorForm.qml  SetupPage.qml  TODOs.txt  application.cpp  application.h  application.hpp  backend.cpp  backend.hpp  directoryDialog.qml  encoder.cpp  encoder.h  encodeviewmodel.cpp  ffmpegcapabilities.cpp  ffmpegcapabilities.h  filterviewmodel.hpp  inputfileviewmodel.cpp  inputfileviewmodel.hpp  inputviewmodel.cpp  inputviewmodel.hpp  main.cpp  main.qml  mainviewmodel.cpp  mainviewmodel.hpp  outputfileviewmodel.cpp  outputfileviewmodel.hpp  outputviewmodel.hpp  pch.hpp  qml.qrc  qmlutils.hpp  resources.qrc  utilities.cpp  utilities.h  utilities.hpp  (+1 more)
FFmpegExplorer-old/: ListControlDelegate.qml  README.md  encoder.hpp  ffmpegcapabilities.cpp  ffmpegcapabilities.hpp  main.qml  qml.qrc
FFmpegExplorer-old2/: main.cpp  main.qml  qml.qrc  qmlutils.hpp
FFmpegExplorer-old3/: encodeitemviewmodel.hpp  encodeviewmodel.hpp  main.cpp  main.qml  mainviewmodel.cpp  viewmodelbase.cpp
FFmpegExplorer-old4/: DetailsPage.qml  EncodeQueuePage.qml  FFmpegExplorer.pro  TODOs.txt  inputfileviewmodel.cpp  inputfileviewmodel.hpp  inputviewmodel.cpp  inputviewmodel.hpp  main.qml  mainviewmodel.cpp  mainviewmodel.hpp  outputfileviewmodel.cpp  outputfileviewmodel.hpp  outputviewmodel.hpp  qml.qrc  qmlutils.hpp  viewmodelbase.cpp  viewmodelbase.hpp
FFmpegExplorer-old5/: FFmpegExplorer.pro  (+12 more)
(+413 files in other folders)
